# text-to-video

./: .env.example  .gitignore  MERMAID_README.md  README.md  docker-compose.macos.yml  docker-compose.yml
chatterbox-tts-api/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
chatterbox-tts-api/app/: main.py
chatterbox-tts-api/app/core/: version.py
chatterbox-tts-api/docker/: Dockerfile  Dockerfile.blackwell  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.mps  Dockerfile.mps-simple  Dockerfile.uv  Dockerfile.uv.gpu  README-MACOS.md  docker-compose.blackwell.yml  docker-compose.mps.yml
frontend/: Dockerfile  FRONTEND_UI_IMPROVEMENTS.md  README.md  UI_UPDATE_COMPLETE.md  next.config.ts  package-lock.json  package.json  start.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/v1/admin/cleanup/: route.ts
frontend/src/app/api/v1/admin/llm/cache/clear/: route.ts
frontend/src/app/api/v1/admin/llm/cache/info/: route.ts
frontend/src/app/api/v1/admin/llm/cache/refresh/[provider]/: route.ts
frontend/src/app/api/v1/admin/llm/config/: route.ts
frontend/src/app/api/v1/admin/llm/fetch-models/: route.ts
frontend/src/app/api/v1/admin/llm/health/: route.ts
frontend/src/app/api/v1/admin/llm/provider/[provider]/: route.ts
frontend/src/app/api/v1/admin/llm/providers/: route.ts
frontend/src/app/api/v1/admin/llm/test/: route.ts
frontend/src/app/api/v1/admin/llm/test-model/: route.ts
frontend/src/components/: AdminPanel.tsx  ConnectionStatus.tsx  ConnectionTest.tsx  FileUpload.tsx  JobStatus.tsx  JobsList.tsx  LLMSettings.tsx  VideoPlayer.tsx
frontend/src/hooks/: useConnectionStatus.ts  useJobs.ts  useVideoGeneration.ts
frontend/src/types/: api.ts
server/: .env.template  CHANGELOG.md  Dockerfile  OPTIMIZATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  asset_router.py  composer.py  main.py  orchestrator.py  orchestrator_sync.py
server/app/core/: config.py  error_handlers.py  llm_factory.py  logging_config.py  memory_optimizer.py  queue_manager.py  resource_manager.py  system_optimizer.py
server/app/schemas/: admin.py  errors.py  video.py
server/app/services/: cache_service.py  job_service.py  llm_admin_service.py  llm_service.py  llm_service_sync.py  redis_service.py  tts_service.py  tts_service_sync.py  video_composer.py  video_composer_sync.py  visual_services.py  visual_services_sync.py
server/app/utils/: cache.py  file.py  text_extractor.py
server/tests/: conftest.py  test_cache_service.py
server/tests/contract/: test_download_contract.py  test_generate_contract.py  test_health_contract.py  test_status_contract.py
server/tests/performance/: test_load.py  test_production_time.py  test_reliability.py
tests/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_STRATEGY.md  conftest.py  requirements-tests.txt  run_all_tests.py  test_data_helper.py  test_performance.py  test_reliability.py  test_resources.py
tests/integration/: INTEGRATION_TESTS_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  conftest.py  run_integration_tests.py  test_integration_performance.py  test_integration_reliability.py  test_integration_resources.py
